# RemoteCWKeyer-esp32

./: .clangd  .envrc  .gitattributes  .gitignore  ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  CODING_STYLE.md  Cargo.toml  JOURNAL.md  MIGRATION_GUIDE.md  MIGRATION_SUMMARY.md  MIGRATION_SUMMARY_FINAL.md  PVS-Studio.cfg  README.md  TODO.md  build.rs  build_uf2.sh  docker-compose.yml  parameters.yaml  parameters_v1.yaml.bak  partitions.csv  rust-toolchain.toml  sdkconfig  sdkconfig.defaults  sdkconfig.old  treemap.config.json
.PVS-Studio/State/: WindowState.json
.cargo/: config.toml
.claude/: CODE_STYLE.md  MEMORY.md  code-quality.md  feature-status.md  settings.local.json  smarter-everyday-state.json
.claude/agents/: rt-safety-reviewer.md
.devcontainer/: Dockerfile  README.md  devcontainer.json
.devcontainer/.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: devcontainer-image.yml
.serena/: project.yml
components/esp_wireguard/: CLAUDE.md  CMakeLists.txt
components/esp_wireguard/src/: wireguard-platform.c
components/keyer_audio/: CLAUDE.md  CMakeLists.txt
components/keyer_audio/include/: audio.h  audio_buffer.h  audio_source.h  ptt.h  sidetone.h
components/keyer_audio/src/: audio_buffer.c  audio_source.c  ptt.c  sidetone.c  sine_lut.c
components/keyer_console/: CLAUDE.md  CMakeLists.txt
components/keyer_console/include/: console.h  log_tags.h
components/keyer_console/src/: commands.c  completion.c  console.c  history.c  line_buffer.c  parser.c
components/keyer_core/: CLAUDE.md  CMakeLists.txt
components/keyer_core/include/: consumer.h  fault.h  keyer_core.h  sample.h  stream.h
components/keyer_core/src/: consumer.c  fault.c  sample.c  stream.c
components/keyer_cwnet/: CLAUDE.md  CMakeLists.txt
components/keyer_cwnet/include/: cwnet_client.h  cwnet_frame.h  cwnet_ping.h  cwnet_socket.h  cwnet_timestamp.h
components/keyer_cwnet/src/: cwnet_client.c  cwnet_frame.c  cwnet_ping.c  cwnet_socket.c  cwnet_timestamp.c
components/keyer_decoder/: CLAUDE.md  CMakeLists.txt
components/keyer_decoder/include/: decoder.h  morse_table.h  timing_classifier.h
components/keyer_decoder/src/: decoder.c  morse_table.c  timing_classifier.c
components/keyer_hal/: CLAUDE.md  CMakeLists.txt  idf_component.yml
components/keyer_hal/include/: hal_audio.h  hal_es8311.h  hal_gpio.h
components/keyer_hal/src/: hal_audio.c  hal_es8311.c  hal_gpio.c
components/keyer_iambic/: CLAUDE.md  CMakeLists.txt
components/keyer_iambic/include/: iambic.h  iambic_preset.h
components/keyer_iambic/src/: iambic.c  iambic_preset.c
components/keyer_logging/: CLAUDE.md  CMakeLists.txt
components/keyer_logging/include/: rt_log.h
components/keyer_logging/src/: log_stream.c  uart_logger.c
components/keyer_morse/: CMakeLists.txt
components/keyer_morse/include/: morse_table.h
components/keyer_morse/src/: morse_table.c
components/keyer_text/: CLAUDE.md  CMakeLists.txt
components/keyer_text/include/: text_keyer.h  text_memory.h
components/keyer_text/src/: text_keyer.c  text_memory.c
components/keyer_usb/: CLAUDE.md  CMakeLists.txt  idf_component.yml
components/keyer_usb/include/: usb_cdc.h  usb_console.h  usb_log.h  usb_uf2.h  usb_winkeyer.h
components/keyer_usb/src/: usb_cdc.c  usb_console.c  usb_log.c  usb_uf2.c  usb_winkeyer.c
components/keyer_vpn/: CLAUDE.md  CMakeLists.txt  idf_component.yml
components/keyer_vpn/include/: vpn.h
components/keyer_vpn/src/: vpn.c
components/keyer_webui/: CLAUDE.md  CMakeLists.txt
components/keyer_webui/frontend/: CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
components/keyer_webui/frontend/src/: App.svelte
components/keyer_webui/frontend/src/lib/: api.ts  themes.ts  types.ts
components/keyer_webui/frontend/src/lib/stores/: theme.ts
components/keyer_webui/frontend/src/pages/: Config.svelte  Decoder.svelte  Firmware.svelte  Home.svelte  Keyer.svelte  System.svelte  Timeline.svelte
components/keyer_webui/include/: assets.h  config_schema.h  sse.h  webui.h  ws_server.h
components/keyer_webui/scripts/: embed_assets.py
components/keyer_webui/src/: api_config.c  api_decoder.c  api_firmware.c  api_keyer.c  api_system.c  api_timeline.c  api_vpn.c  assets.c  http_server.c  sse.c  ws_server.c
components/keyer_wifi/: CLAUDE.md  CMakeLists.txt
components/keyer_wifi/include/: wifi.h
components/keyer_wifi/src/: wifi.c
components/keyer_winkeyer/: CMakeLists.txt
components/keyer_winkeyer/include/: morse_queue.h  winkeyer.h  winkeyer_morse.h  winkeyer_parser.h  winkeyer_protocol.h
components/keyer_winkeyer/src/: morse_queue.c  winkeyer.c  winkeyer_morse.c  winkeyer_parser.c
components/provisioning/: CLAUDE.md  CMakeLists.txt
components/provisioning/include/: provisioning.h
components/provisioning/src/: provisioning.c  provisioning_dns.c  provisioning_html.c  provisioning_http.c  provisioning_wifi.c
docs/: PRD-ISR-Paddle-Input.md  TODO.md
main/: CLAUDE.md  CMakeLists.txt  audio_test.c  bg_task.c  main.c  rt_task.c
scripts/: gen_config.py  gen_config_c.py  gen_log_tags.py  gen_preset_config.py
src/: consumer.rs  fault.rs  iambic.rs  lib.rs  log_globals.rs  logging.rs  main.rs  sample.rs  stream.rs  uart_logger.rs
test_host/: CLAUDE.md  CMakeLists.txt  test_completion.c  test_config_console.c  test_console_parser.c  test_cwnet_client.c  test_cwnet_frame_parser.c  test_cwnet_ping.c  test_cwnet_timestamp.c  test_decoder.c  test_fault.c  test_history.c  test_iambic.c  test_iambic_preset.c  test_main.c  test_morse.c  test_morse_table.c  test_rt_diag.c  test_sidetone.c  test_stream.c  test_timing_classifier.c  test_winkeyer_parser.c
test_host/stubs/: esp_err.h  esp_stubs.c  esp_stubs.h  esp_timer.h
tests/: audio_buffer_tests.rs  audio_integration_tests.rs  audio_lut_tests.rs  audio_ptt_tests.rs  audio_sidetone_tests.rs  audio_source_tests.rs  console_commands_tests.rs  console_completion_tests.rs  console_history_tests.rs  console_line_buffer_tests.rs  console_parser_tests.rs  preset_system_tests.rs
(+107 files in other folders)
