[package]
name = "rust-remote-cw-keyer"
version = "0.1.0"
edition = "2021"
authors = ["RustRemoteCWKeyer Contributors"]
description = "Professional CW keyer with remote operation capability"
repository = "https://github.com/TODO/RustRemoteCWKeyer"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
# esp-idf-svc porta esp-idf-hal e esp-idf-sys come dipendenze transitive
esp-idf-svc = { git = "https://github.com/esp-rs/esp-idf-svc.git", features = ["binstart"] }

[patch.crates-io]
# Forza uso delle versioni git per compatibilità ESP-IDF 5.5
esp-idf-sys = { git = "https://github.com/esp-rs/esp-idf-sys.git" }
esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal.git" }

[build-dependencies]
embuild = "0.32"

[profile.release]
opt-level = "s"         # Optimize for size
lto = true              # Link-time optimization
codegen-units = 1       # Better optimization
debug = false

[profile.dev]
opt-level = 1           # Some optimization for faster testing
debug = true

[[bin]]
name = "keyer"
path = "src/main.rs"

[features]
default = ["esp32s3"]
esp32s3 = []
esp32p4 = []
