[package]
name = "rust-remote-cw-keyer"
version = "0.1.0"
edition = "2021"
authors = ["RustRemoteCWKeyer Contributors"]
description = "Professional CW keyer with remote operation capability"
repository = "https://github.com/TODO/RustRemoteCWKeyer"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
# esp-idf-svc porta esp-idf-hal e esp-idf-sys come dipendenze transitive
# Versione 0.51.0 compatibile con ESP-IDF v5.3
esp-idf-svc = { version = "0.51.0", features = ["binstart"] }
log = "0.4"

[build-dependencies]
embuild = "0.33"

[profile.release]
opt-level = "s"         # Optimize for size
lto = true              # Link-time optimization
codegen-units = 1       # Better optimization
debug = false

[profile.dev]
opt-level = 1           # Some optimization for faster testing
debug = true

[[bin]]
name = "keyer"
path = "src/main.rs"

[features]
default = ["esp32s3"]
esp32s3 = []
esp32p4 = []
